gccida/g0/inc_for_reload
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/reload1.c:8373:4: error: expected ';' after expression
rtx add_insn; // [rsp+28h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/reload1.c:8378:4: error: expected ';' after expression
rtx incloc; // [rsp+50h] [rbp-10h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/reload1.c:8378:5: error: use of undeclared identifier 'incloc'
rtx incloc; // [rsp+50h] [rbp-10h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/reload1.c:8382:1: error: use of undeclared identifier 'incloc'
incloc = value->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/reload1.c:8390:17: error: use of undeclared identifier 'incloc'
if ( *( _WORD *)incloc == 61 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/reload1.c:8391:21: error: use of undeclared identifier 'incloc'
reg_last_reload_reg[incloc->fld[0].rtuint] = 0LL; 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/reload1.c:8403:30: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)incloc + 2), incloc, inc); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/reload1.c:8403:66: error: use of undeclared identifier 'incloc'
v7 = gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)incloc + 2), incloc, inc); 
                                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/reload1.c:8403:79: error: use of undeclared identifier 'incloc'
v7 = gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)incloc + 2), incloc, inc); 
                                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/reload1.c:8404:37: error: use of undeclared identifier 'incloc'
v8 = gen_rtx_fmt_ee( SET, VOIDmode, incloc, v7); 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/reload1.c:8405:10: error: non-object type 'void (rtx)' (aka 'void (struct rtx_def *)') is not assignable
add_insn = emit_insn( v8); 
~~~~~~~~ ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/reload1.c:8406:6: error: subscript of pointer to function type 'void (rtx)' (aka 'void (struct rtx_def *)')
if ( add_insn[2].fld[0].rtint < 0 ) 
     ^~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/reload1.c:8409:9: error: subscript of pointer to function type 'void (rtx)' (aka 'void (struct rtx_def *)')
rtint = add_insn[2].fld[0].rtint; 
        ^~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/reload1.c:8417:33: error: use of undeclared identifier 'incloc'
v10 = gen_move_insn( reloadreg, incloc); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/reload1.c:8429:22: error: use of undeclared identifier 'incloc'
v16 = gen_move_insn( incloc, reloadreg); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/reload1.c:8444:22: error: use of undeclared identifier 'incloc'
v14 = gen_move_insn( incloc, reloadreg); 
                     ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/inc_for_reload/src/obj/reload1.o] Error 1
